--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "bcrypt": "^5.1.0",
         "config": "^3.3.9",
         "express": "^4.18.2",
-        "express-validate": "^0.0.8",
+        "express-validator": "^7.0.1",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.1.0"
     },
     "devDependencies": {
