--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-    "name": "mern",
-    "version": "1.0.0",
-    "description": "Mern stack",
-    "main": "app.js",
-    "scripts": {
-        "start": "node app.js",
-        "server": "nodemon app.js"
-    },
-    "keywords": [
-        "mern",
-        "react"
-    ],
-    "author": "diparfenov",
-    "license": "ISC",
-    "dependencies": {
-        "bcrypt": "^5.1.0",
-        "config": "^3.3.9",
-        "express": "^4.18.2",
-        "express-validator": "^7.0.1",
-        "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.1.0"
-    },
-    "devDependencies": {
-        "concurrently": "^8.0.1",
-        "nodemon": "^2.0.22"
-    }
+  "name": "mern",
+  "version": "1.0.0",
+  "description": "Mern stack",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "server": "nodemon app.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
+  "keywords": [
+    "mern",
+    "react"
+  ],
+  "author": "diparfenov",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.9",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22"
+  }
 }
